[gd_scene load_steps=8 format=3 uid="uid://c4c5o5aqtvimi"]

[ext_resource type="Texture2D" uid="uid://uu116ta75q4" path="res://icon.svg" id="1_08ja4"]
[ext_resource type="Script" path="res://upgrade_screen.gd" id="1_ypabj"]
[ext_resource type="Script" path="res://next_day_button.gd" id="2_8j4kv"]
[ext_resource type="Texture2D" uid="uid://cg3ows3ls45fp" path="res://Assets/Bubbles/bubble2.png" id="3_v1f64"]
[ext_resource type="Texture2D" uid="uid://c7jn8oocficgl" path="res://Assets/Bubbles/bubble1.png" id="4_owdd5"]
[ext_resource type="Texture2D" uid="uid://dvwymmwh4eoil" path="res://Assets/Bubbles/bubble3.png" id="5_nihfo"]
[ext_resource type="Script" path="res://upgrade_soap_button.gd" id="6_ahvdy"]

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypabj")

[node name="NextDayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 534.0
offset_right = 199.0
offset_bottom = 662.0
texture_normal = ExtResource("1_08ja4")
script = ExtResource("2_8j4kv")

[node name="Description" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 999.0
offset_top = 230.0
offset_right = 1216.0
offset_bottom = 528.0
text = "Upgrade X
-------------------------
Cost: $10000000
-------------------------
Description:
Lorem Ipsum"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 565.0
offset_top = 57.0
offset_right = 738.0
offset_bottom = 89.0
text = "Soap Upgrade"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 364.0
offset_right = 520.0
offset_bottom = 396.0
text = "Mineral Water"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 368.0
offset_right = 745.0
offset_bottom = 400.0
text = "Holy Water"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 532.0
offset_right = 535.0
offset_bottom = 564.0
text = "Atomic Water"

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 607.0
offset_top = 533.0
offset_right = 770.0
offset_bottom = 561.0
text = "Holy Water (Real)"

[node name="CurrentMoney" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 42.0
offset_right = 226.0
offset_bottom = 75.0
text = "Money: $100"

[node name="BuyUpgrade" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1051.0
offset_top = 588.0
offset_right = 1115.0
offset_bottom = 652.0
texture_normal = ExtResource("3_v1f64")

[node name="UpgradeMineralWater" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 431.0
offset_top = 403.0
offset_right = 495.0
offset_bottom = 467.0
texture_normal = ExtResource("4_owdd5")

[node name="UpgradeHolyWater" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 403.0
offset_right = 705.0
offset_bottom = 467.0
texture_normal = ExtResource("4_owdd5")

[node name="UpgradeAtomicWater" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 567.0
offset_right = 498.0
offset_bottom = 631.0
texture_normal = ExtResource("4_owdd5")

[node name="UpgradeHolyWaterReal" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 565.0
offset_right = 708.0
offset_bottom = 629.0
texture_normal = ExtResource("4_owdd5")

[node name="UpgradeSoap" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 591.0
offset_top = 98.0
offset_right = 655.0
offset_bottom = 162.0
texture_normal = ExtResource("5_nihfo")
script = ExtResource("6_ahvdy")

[connection signal="pressed" from="NextDayButton" to="NextDayButton" method="_on_pressed"]
[connection signal="pressed" from="BuyUpgrade" to="." method="_on_buy_upgrade_pressed"]
[connection signal="pressed" from="UpgradeMineralWater" to="." method="_on_upgrade_mineral_water_pressed"]
[connection signal="pressed" from="UpgradeHolyWater" to="." method="_on_upgrade_holy_water_pressed"]
[connection signal="pressed" from="UpgradeAtomicWater" to="." method="_on_upgrade_atomic_water_pressed"]
[connection signal="pressed" from="UpgradeHolyWaterReal" to="." method="_on_upgrade_holy_water_real_pressed"]
[connection signal="pressed" from="UpgradeSoap" to="." method="_on_upgrade_soap_pressed"]
[connection signal="pressed" from="UpgradeSoap" to="UpgradeSoap" method="_on_pressed"]
